# Raytracer

./: .gitignore  CMakeLists.txt  README.md  readme.md
src/: camera.cpp  camera.hpp  color.cpp  color.hpp  main.cpp  ray.cpp  ray.hpp  vec3.hpp
